trying to fix overlap problem

--- a/myWebsite/src/app/app.component.css
+++ b/myWebsite/src/app/app.component.css
@@ -32,7 +32,7 @@
 }
 
 /* Animation Properties */
-*{
+.area {
     margin: 0px;
     padding: 0px; 
 }
@@ -41,7 +41,6 @@
     width: 100%;
     position: absolute;
     top:50vh;
-    
 }
 
 .context h1{
