--- a/myWebsite/src/app/education/education.component.css
+++ b/myWebsite/src/app/education/education.component.css
@@ -26,55 +26,21 @@
     background-position: 0% 100%, 100% 100%;
 }
 
-.cards {
+.list {
+    width: 1000px;
+    background-color: rgb(250, 250, 250);
+    position: relative;
+}
+
+.list_item {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 6%;
-}
-
-.cards__card {
-    width: 25%;
-    height: 30%;
-    border: 1px solid rgb(217, 217, 217);
-    background-color: rgb(253, 253, 253);
-    margin-bottom: 20px;
-}
-
-.cards__card:hover {
-    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
-    transform: translate3d(0,0,0);
-    transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
-}
-
-.cards:hover .cards__card:not(:hover) {
-    filter: grayscale(100%);
-    opacity: 0.75;
-}
-  
-.cards:hover .cards__card:not(:hover)::after {
-    background-color: rgba(#000, 0.5);
-}
-
-.image {
-    height: 80%;
-    width: 100%;
-    
-}
-
-.list {
-    width: 750px;
-    background-color: rgb(250, 250, 250);
-}
-
-.item {
-    /* border: 1px solid rgb(217, 217, 217); */
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 20px;
     margin-right: 20px;
     width: 95%;
+    height: 180px;
 }
 
 .item:hover {
@@ -83,13 +49,32 @@
     transition: background .4s cubic-bezier(.25,.8,.25,1), box-shadow 280ms cubic-bezier(.4,0,.2,1);
 }
 
+.list_item:hover {
+    box-shadow: 0 8px 8px 8px rgba(0,0,0,.2), 0 8px 8px 0 rgba(0,0,0,.14), 0 8px 8px 0 rgba(0,0,0,.12) !important;
+    transform: translate3d(0,0,0);
+    transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
+}
+
+.list:hover .list_item:not(:hover) {
+    filter: grayscale(100%);
+    opacity: 0.75;
+}
+  
+.list:hover .list_item:not(:hover)::after {
+    background-color: rgba(#000, 0.5);
+}
+
+.item-image {
+    width: 266px;
+    padding: 15px;
+}
+
+.item-text {
+    padding: 15px;
+}
+
 .item-title {
     font-weight: bold;
     font-size: 20px;
 }
-
-.card-title {font-size: 1.3vw; margin-top: 1%}
-.card-subtitle {font-size: .9vw; margin-top: 1%}
-.card-content {font-size: .85vw; margin-top: 1%}
-
  
