--- a/myWebsite/src/app/home/home.component.css
+++ b/myWebsite/src/app/home/home.component.css
@@ -23,13 +23,6 @@
   background-size: 51% .1em;
   background-position: 0% 100%, 100% 100%;
 }
-  
-.cards {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
 
 .card {
   width: 450px;
